# VeilAuction

./: Anchor.toml  Arcium.toml  Cargo.toml  README.md  deploy-devnet.sh  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
app/api/auctions/bid/: route.ts
app/api/auctions/claim/: route.ts
app/api/auctions/close/: route.ts
app/api/auctions/create/: route.ts
app/api/auctions/reclaim/: route.ts
app/api/auctions/resolve/: route.ts
app/auction/[id]/: page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/auctions/: page.tsx
app/dashboard/bid-vault/: page.tsx
app/dashboard/bids/: page.tsx
app/dashboard/create/: page.tsx
app/dashboard/history/: page.tsx
components/: cta-section.tsx  features-section.tsx  footer.tsx  header.tsx  hero-orb.tsx  hero-section.tsx  how-it-works-section.tsx  logo.tsx  theme-toggle.tsx
components/dashboard/: auction-card.tsx  header.tsx  sidebar.tsx  stats-cards.tsx
components/providers/: solana-provider.tsx
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
hooks/: use-auction-events.ts  use-auctions.ts  use-veil-auction.ts
lib/: arcium-errors.ts  arcium-server.ts  bid-vault.ts  veil-types.ts
programs/veil_auction/: Cargo.toml
programs/veil_auction/src/: lib.rs
test/: e2e.ts  full.ts  rpc-check.ts  smoke.ts
tests/: veil_auction.ts
