[workspace]
members = ["programs/*", "encrypted-ixs"]
resolver = "2"

[workspace.dependencies]
time-core = "=0.1.2"
darling = "=0.20.10"
serde_with = "=3.9.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
